Sonar cleanup.